--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -12,8 +12,9 @@ jobs:
         with:
           node-version: '16.x'
           registry-url: 'https://npm.pkg.github.com'
-          # Defaults to the user or organization that owns the workflow file
-          scope: '@github'
-      - run: npm install -ddd @github/combobox-nav
+      # - run: npm install -ddd @github/combobox-nav
+      #   env:
+      #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - run: npm install -ddd @dhruv-gh-test-org-1/npm-test-package-2
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
