--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -17,6 +17,6 @@ jobs:
       #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: |
           npm whoami -ddd --registry=https://npm.pkg.github.com
-          npm install -ddd @dhruv-gh-test-org-1/npm-test-package-6 --registry=https://npm.pkg.github.com
+      #   npm install -ddd @dhruv-gh-test-org-1/npm-test-package-6 --registry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
