--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -11,7 +11,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-          registry-url: 'https://npm.pkg.github.com'
+          registry-url: 'https://npm-lab.pkg.github.com'
       # - run: npm install -ddd @github/combobox-nav
       #   env:
       #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
