--- a/.github/workflows/npm-install.yml
+++ b/.github/workflows/npm-install.yml
@@ -11,12 +11,12 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: '16.x'
-          registry-url: 'https://npm-lab.pkg.github.com'
+          registry-url: 'https://npm.pkg.github.com'
       # - run: npm install -ddd @github/combobox-nav
       #   env:
       #     NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       - run: |
-          npm whoami -ddd --registry https://npm-lab.pkg.github.com
+          npm whoami -ddd --registry https://npm.pkg.github.com
       #   npm install -ddd @dhruv-gh-test-org-1/npm-test-package-6 --registry=https://npm.pkg.github.com
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
